Fix typos in High-Level Design documentation to ensure consistent naming of GitGrove

--- a/doc/1.HighLevelDesignDoc.md
+++ b/doc/1.HighLevelDesignDoc.md
@@ -1,19 +1,19 @@
 
 
-# **GitGroove — High-Level Design (v1)**
+# **GitGrove — High-Level Design (v1)**
 
 
 
 # **1. Purpose**
 
-GitGroove manages **multiple logical repositories inside a single Git repository**.
+GitGrove manages **multiple logical repositories inside a single Git repository**.
 It organizes repos, builds hierarchy, and creates **real Git branches** for each logical repo using a namespace-based scheme.
 
-GitGroove does NOT modify Git's core behavior — it simply structures the workspace.
+GitGrove does NOT modify Git's core behavior — it simply structures the workspace.
 
 ---
 
-# **2. Initialization (`gitgroove init`)**
+# **2. Initialization (`GitGrove init`)**
 
 ### **What It Does**
 
@@ -22,16 +22,16 @@ GitGroove does NOT modify Git's core behavior — it simply structures the works
 * Creates:
 
   ```
-  .gitgroove/
+  .GitGrove/
   ```
 * Initializes required metadata files
 * Creates a dedicated Git branch:
 
   ```
-  gitgroove
+  GitGrove
   ```
 
-All GitGroove files and metadata live inside `.gitgroove/` and are tracked on the `gitgroove` branch.
+All GitGrove files and metadata live inside `.GitGrove/` and are tracked on the `GitGrove` branch.
 
 ---
 
@@ -43,11 +43,11 @@ All GitGroove files and metadata live inside `.gitgroove/` and are tracked on th
 * **Detached HEAD:**
   Cannot run initialization if user is on a detached HEAD.
 
-* **Existing `.gitgroove/`:**
+* **Existing `.GitGrove/`:**
   Initialization must detect and not overwrite existing workspace unless user forces it.
 
 * **Invalid metadata (broken JSON):**
-  GitGroove must stop if `.gitgroove` is corrupted.
+  GitGrove must stop if `.GitGrove` is corrupted.
 
 ---
 
@@ -57,7 +57,7 @@ All GitGroove files and metadata live inside `.gitgroove/` and are tracked on th
 
 When user marks a directory as a repo:
 
-* GitGroove stores:
+* GitGrove stores:
 
   * unique name
   * path
@@ -65,7 +65,7 @@ When user marks a directory as a repo:
 * It will create a dedicated **repo main branch**:
 
   ```
-  gitgroove/repos/<repo-name>/branches/main
+  GitGrove/repos/<repo-name>/branches/main
   ```
 
 This branch contains **only that repo’s directory** (preserved path), not the full project.
@@ -84,10 +84,10 @@ This branch contains **only that repo’s directory** (preserved path), not the 
   Forbidden in v1 — nested Git repos are not allowed.
 
 * **User later moves folder manually:**
-  GitGroove cannot detect this → user must update path explicitly.
+  GitGrove cannot detect this → user must update path explicitly.
 
 * **Registering overlapping directories:**
-  If repo paths overlap unintentionally, GitGroove must warn or block.
+  If repo paths overlap unintentionally, GitGrove must warn or block.
 
 ---
 
@@ -113,7 +113,7 @@ a/
 Users can explicitly set:
 
 ```
-gitgroove link --parent X --child Y
+GitGrove link --parent X --child Y
 ```
 
 Stored in `hierarchy.json`.
@@ -129,7 +129,7 @@ Stored in `hierarchy.json`.
   Manual overrides must take precedence over automatic inference.
 
 * **Ambiguous parent selection:**
-  If multiple possible parents exist based on path, GitGroove must require user confirmation.
+  If multiple possible parents exist based on path, GitGrove must require user confirmation.
 
 ---
 
@@ -142,13 +142,13 @@ Stored in `hierarchy.json`.
 For repo named `billing`:
 
 ```
-gitgroove/repos/billing_repo/branches/main
+GitGrove/repos/billing_repo/branches/main
 ```
 
 For child repo:
 
 ```
-gitgroove/repos/services/children/billing_repo/branches/main
+GitGrove/repos/services/children/billing_repo/branches/main
 ```
 
 ### **Working Tree Behavior**
@@ -170,7 +170,7 @@ When user checks out a repo branch:
 ### **Edge Cases & Challenges**
 
 * **Unsafe characters in branch names:**
-  GitGroove must sanitize (e.g., slashes in user branches).
+  GitGrove must sanitize (e.g., slashes in user branches).
 
 * **Leftover files when switching away:**
   Repo branch checkout must ensure the working tree is clean and contain ONLY that repo’s files.
@@ -179,7 +179,7 @@ When user checks out a repo branch:
   Branch creation may be slow for massive repos.
 
 * **Deleting repo branches manually:**
-  Could break GitGroove; system must detect missing namespaced branches and report clearly.
+  Could break GitGrove; system must detect missing namespaced branches and report clearly.
 
 ---
 
@@ -194,7 +194,7 @@ Commits made while checked out to a repo branch:
 * Are stored in the namespace branch:
 
   ```
-  gitgroove/repos/<repo>/branches/<branch>
+  GitGrove/repos/<repo>/branches/<branch>
   ```
 * Represent independent evolution for that repo
 
@@ -216,7 +216,7 @@ Developers work on repo-specific tasks without touching the whole project.
   Should warn user before commit.
 
 * **Renames inside repo path:**
-  Behave like normal Git — GitGroove imposes no special rules.
+  Behave like normal Git — GitGrove imposes no special rules.
 
 ---
 
@@ -228,9 +228,9 @@ Each repo manages its own isolated branch history.
 Merging two branches of the same repo:
 
 ```
-git merge gitgroove/repos/myrepo/branches/feature
+git merge GitGrove/repos/myrepo/branches/feature
      into
-gitgroove/repos/myrepo/branches/main
+GitGrove/repos/myrepo/branches/main
 ```
 
 Behaves like a normal Git merge, but only on repo files.
@@ -285,7 +285,7 @@ Switching from project branch to repo branch (and back) must maintain safety.
   User must stash or commit before switching.
 
 * **Untracked files that would be overwritten:**
-  GitGroove must detect and warn/block.
+  GitGrove must detect and warn/block.
 
 * **Repository conflicts leftover:**
   User must resolve before switching away.
@@ -303,7 +303,7 @@ Switching from project branch to repo branch (and back) must maintain safety.
 * User must handle conflicts manually
 * Metadata format may evolve later
 
-GitGroove v1 focuses purely on:
+GitGrove v1 focuses purely on:
 
 * initialization
 * registering repos
